tests/snapshots/integration__validate__symbol_choice_fn.snap
---
source: tests/validate.rs
expression: data
---
RUN
prog +unknown

# OUTPUT
command cat >&2 <<-'EOF' 
error: invalid value `unknown` for `+<TOOLCHAIN>`
  [possible values: stable, nightly]
EOF
exit 1

# BUILD_OUTPUT
