tests/snapshots/integration__validate__symbol_choice_fn_skip.snap
---
source: tests/validate.rs
expression: data
---
RUN
prog +unknown

# OUTPUT
argc_toolchain=unknown
argc__args=( prog +unknown )
argc__positionals=(  )

# BUILD_OUTPUT
